2011-04-25  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        JavaScriptCore should play nice strict OwnPtrs
        https://bugs.webkit.org/show_bug.cgi?id=59401

        * dfg/DFGByteCodeParser.cpp:
        (JSC::DFG::ByteCodeParser::parse):
        * heap/Heap.cpp:
        (JSC::TypeCounter::TypeCounter):
        * jit/JITStubs.cpp:
        (JSC::JITThunks::JITThunks):
        * parser/JSParser.cpp:
        (JSC::JSParser::Scope::Scope):
        * yarr/YarrJIT.cpp:
        (JSC::Yarr::YarrGenerator::GenerationState::addParenthesesTail):

2011-04-25  Mark Rowe  <mrowe@apple.com>

        Build fix.

        * wtf/ListHashSet.h:

2011-04-25  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Bug 59370 - DFG JIT - fix leak of BlocksBlocks
        (put the blocks immediately into an OwnPtr).

        * dfg/DFGByteCodeParser.cpp:
        (JSC::DFG::ByteCodeParser::parse):

2011-04-25  James Robinson  <jamesr@chromium.org>

        Reviewed by David Levin.

        Fix strict OwnPtr violations in ListHashSet and RenderLayerCompositor
        https://bugs.webkit.org/show_bug.cgi?id=59353

        * wtf/ListHashSet.h:
        (WTF::::ListHashSet):

2011-04-25  David Levin  <levin@chromium.org>

        Reviewed by Adam Barth.

        Fix PassOwnPtr issues in Structure and JSGlobalData.cpp
        https://bugs.webkit.org/show_bug.cgi?id=59347

        * runtime/JSGlobalData.cpp:
        (JSC::JSGlobalData::JSGlobalData):
        * runtime/Structure.cpp:
        (JSC::Structure::copyPropertyTable):
        (JSC::Structure::createPropertyMap):
        * runtime/Structure.h:

2011-04-25  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoffrey Garen.

        Make ClassInfo required when creating a Structure
        https://bugs.webkit.org/show_bug.cgi?id=59340

        Add ClassInfo to all those types which currently don't
        have it, and add an assertion to Structure::create to